name:               IMOKURI-github-io
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10
author:             IMOKURI
license:            MIT
license-file:       LICENSE
copyright:          2015, IMOKURI

executable site
  main-is:          site.hs
  hs-source-dirs:   src
  build-depends:    base == 4.*
                  , hakyll == 4.6.*
                  , clay
  ghc-options:      -Wall -threaded
  default-language: Haskell2010
