name:               IMOKURI-github-io
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10
author:             IMOKURI
license:            MIT
license-file:       LICENSE
copyright:          2015, IMOKURI
category:           Web
synopsis:           Personal website

executable site
  main-is:          Main.hs
  hs-source-dirs:   src
  build-depends:    base == 4.*
                  , hakyll
                  , filepath
                  , highlighting-kate
                  , MissingH
  ghc-options:      -Wall -threaded
  default-language: Haskell2010

test-suite tests
  type:             exitcode-stdio-1.0
  main-is:          Tests.hs
  hs-source-dirs:   tests
  build-depends:    base == 4.*
                  , hlint
  ghc-options:      -Wall -threaded
  default-language: Haskell2010

source-repository head
  type:     git
  location: git://github.com/IMOKURI/IMOKURI.github.io.git
